Library/AXL(Library)/Visual Basic(Net)/AXDev.vb


' Reading firmware version function of slaves in network type master board.
' Declare with array of ucaFirmwareVersion unsigned char type(Size : 4 or more)
Public Declare Function AxmInfoGetFirmwareVersion Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef ucaFirmwareVersion As Integer) As Integer
Public Declare Function AxaInfoGetFirmwareVersion Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef ucaFirmwareVersion As Integer) As Integer
Public Declare Function AxdInfoGetFirmwareVersion Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef ucaFirmwareVersion As Integer) As Integer
Public Declare Function AxcInfoGetFirmwareVersion Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal ucaFirmwareVersion As Integer) As Integer


'======== Only for PCI-R1604-MLII ===========================================================================
' Set the value of Torq Feed Forward of Option Field of INTERPOLATE and LATCH Command.
' Default value : Max
' Setting value Range : 0 ~ 4000H
' If it is set to 4000H or higher, the setting is set higher than that, but the operation is applied to the value of 4000H.
Public Declare Function  AxmSetTorqFeedForward Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dwTorqFeedForward As Integer) As Integer

' It is API that read value of Torq Feed Forward of Option Field of INTERPOLATE and LATCH Command.
' Default value : Max
Public Declare Function  AxmGetTorqFeedForward Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dwpTorqFeedForward As Integer) As Integer

' It is API that set the value of Velocity Feed Forward of VFF Field of INTERPOLATE and LATCH Command.
' Default value : 0
' Setting value Range : 0 ~ FFFFH
Public Declare Function  AxmSetVelocityFeedForward Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dwVelocityFeedForward As Integer) As Integer

' It is API that read value of Velocity Feed Forward of VFF Field of INTERPOLATE and LATCH Command.
Public Declare Function AxmGetVelocityFeedForward Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dwpVelocityFeedForward As Integer) As Integer


' Set Encoder type.
' Default value : 0(TYPE_INCREMENTAL)
' Setting range : 0 ~ 1
' dwEncoderType : 0(TYPE_INCREMENTAL), 1(TYPE_ABSOLUTE).
Public Declare Function AxmSignalSetEncoderType Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dwEncoderType As Integer) As Integer


' Verify Encoder type.
Public Declare Function AxmSignalGetEncoderType Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dwpEncoderType As Integer) As Integer



' For updating the slave firmware(only for RTEX-PM).
' Public Declare Function AxmSetSendAxisCommand Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal wCommand As Integer, ByRef wpSendData As Integer, ByVal wLength As Integer) As Integer

'======== Only for PCI-R1604-RTEX, RTEX-PM==============================================================
' When Input Universal Input 2, 3, Set Jog move velocity
' Set only once execute after all drive setting (Ex, PulseOutMethod, MoveUnitPerPulse etc..)
Public Declare Function AxmMotSetUserMotion Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dVelocity As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Integer


' When Input Universal Input 2, 3, Set Jog move usage
' Setting value :  0(DISABLE), 1(ENABLE)
Public Declare Function AxmMotSetUserMotionUsage Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dwUsage As Integer) As Integer


' Set Load/UnLoad Position to Automatically move use MPGP Input.
Public Declare Function AxmMotSetUserPosMotion Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dVelocity As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal dLoadPos As Double, ByVal dUnLoadPos As Double, ByVal dwFilter As Integer, ByVal dwDelay As Integer) As Integer


' Set Usage Load/UnLoad Position to Automatically move use MPGP Input
' Setting value :  0(DISABLE), 1(Position function A), 2(Position function B).
Public Declare Function AxmMotSetUserPosMotionUsage Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dwUsage As Integer) As Integer

'========================================================================================================

'======== SIO-CN2CH, Only for absolute position trigger module(B0) ================================================
' The API of writing memory data.
Public Declare Function AxcKeWriteRamDataAddr Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dwAddr As Integer, ByVal dwData As Integer) As Integer
' The API of reading memory data.
Public Declare Function AxcKeReadRamDataAddr Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dwAddr As Integer, ByRef dwpData As Integer) As Integer
' Memory initialization API.
Public Declare Function AxcKeResetRamDataAll Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal dwData As Integer) As Integer
' Trigger timeout setting API.
Public Declare Function AxcTriggerSetTimeout Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dwTimeout As Integer) As Integer
' Trigger timeout checking API.
Public Declare Function AxcTriggerGetTimeout Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef dwpTimeout As Integer) As Integer
' Trigger Waiting State checking API.
Public Declare Function AxcStatusGetWaitState Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef dwpState As Integer) As Integer
' Trigger Waiting State setting API.
Public Declare Function AxcStatusSetWaitState Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dwState As Integer) As Integer

' Write command to designated channel.
Public Declare Function AxcKeSetCommandData32 Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dwCommand As Integer, ByVal dwData As Integer) As Integer
' Write command to designated channel.
Public Declare Function AxcKeSetCommandData16 Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dwCommand As Integer, ByVal wData As Integer) As Integer
' Verify register of specified channel.
Public Declare Function AxcKeGetCommandData32 Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dwCommand As Integer, ByRef dwpData As Integer) As Integer
' Verify register of specified channel.
Public Declare Function AxcKeGetCommandData16 Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dwCommand As Integer, ByRef wpData As Integer) As Integer

'========================================================================================================

' ======== Only for PCI-N804/N404, Sequence Motion ===========================================================
' Set Axis Information of sequence Motion (min 1axis)
' lSeqMapNo : Sequence Motion Index Point
' lSeqMapSize : Number of axis
' long* LSeqAxesNo : Number of arrar
Public Declare Function AxmSeqSetAxisMap Lib "AXL.dll" (ByVal lSeqMapNo As Integer, ByVal lSeqMapSize As Integer, ByRef lSeqAxesNo As Integer) As Integer
Public Declare Function AxmSeqGetAxisMap Lib "AXL.dll" (ByVal lSeqMapNo As Integer, ByRef lSeqMapSize As Integer, ByRef lSeqAxesNo As Integer) As Integer


' Set Standard(Master)Axis of Sequence Motion.
' By all means Set in AxmSeqSetAxisMap setting axis.
Public Declare Function AxmSeqSetMasterAxisNo Lib "AXL.dll" (ByVal lSeqMapNo As Integer, ByVal lMasterAxisNo As Integer) As Integer


' Notifies the library node start loading of Sequence Motion.
Public Declare Function AxmSeqBeginNode Lib "AXL.dll" (ByVal lSeqMapNo As Integer) As Integer


' Notifies the library node end loading of Sequence Motion.
Public Declare Function AxmSeqEndNode Lib "AXL.dll" (ByVal lSeqMapNo As Integer) As Integer


' Start Sequence Motion Move.
Public Declare Function AxmSeqStart Lib "AXL.dll" (ByVal lSeqMapNo As Integer, ByVal dwStartOption As Integer) As Integer


' Set each profile node Information of Sequence Motion in Library.
' if used 1axis Sequence Motion, Must be Set *dPosition one Array.
Public Declare Function AxmSeqAddNode Lib "AXL.dll" (ByVal lSeqMapNo As Integer, ByRef dPosition As Double, ByVal dVelocity As Double, ByVal dAcceleration As Double, ByVal dDeceleration As Double, ByVal dNextVelocity As Double) As Integer


' Return Node Index number of Sequence Motion.
Public Declare Function AxmSeqGetNodeNum Lib "AXL.dll" (ByVal lSeqMapNo As Integer, ByRef lCurNodeNo As Integer) As Integer


'  Return All node count of Sequence Motion.
Public Declare Function AxmSeqGetTotalNodeNum Lib "AXL.dll" (ByVal lSeqMapNo As Integer, ByRef lTotalNodeCnt As Integer) As Integer


' Return Sequence Motion drive status  of specific SeqMap.
' dwInMotion : 0(Drive end), 1(In drive).
Public Declare Function AxmSeqIsMotion Lib "AXL.dll" (ByVal lSeqMapNo As Integer, ByRef dwInMotion As Integer) As Integer


' Clear Sequence Motion Memory
Public Declare Function AxmSeqWriteClear Lib "AXL.dll" (ByVal lSeqMapNo As Integer) As Integer


' Stop sequence motion
' dwStopMode : 0(EMERGENCY_STOP), 1(SLOWDOWN_STOP)
Public Declare Function AxmSeqStop Lib "AXL.dll" (ByVal lSeqMapNo As Integer, ByVal dwStopMode As Integer) As Integer


'========================================================================================================

'======== Only for PCIe-Rxx04-SIIIH ==========================================================================
' (SIIIH, MR_J4_xxB, Para : 0 ~ 8) ==
'     [0] : Command Position
'     [1] : Actual Position
'     [2] : Actual Velocity
'     [3] : Mechanical Signal
'     [4] : Regeneration load factor(%)
'     [5] : Effective load factor(%)
'     [6] : Peak load factor(%)
'     [7] : Current Feedback
'     [8] : Command Velocity
Public Declare Function AxmStatusSetMon Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dwParaNo1 As Integer, ByVal dwParaNo2 As Integer, ByVal dwParaNo3 As Integer, ByVal dwParaNo4 As Integer, ByVal dwUse As Integer) As Integer
Public Declare Function AxmStatusGetMon Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dwpParaNo1 As Integer, ByRef dwpParaNo2 As Integer, ByRef dwpParaNo3 As Integer, ByRef dwpParaNo4 As Integer, ByRef dwpUse As Integer) As Integer
Public Declare Function AxmStatusReadMon Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dwpParaNo1 As Integer, ByRef dwpParaNo2 As Integer, ByRef dwpParaNo3 As Integer, ByRef dwpParaNo4 As Integer, ByRef dwDataValid As Integer) As Integer
Public Declare Function AxmStatusReadMonEx Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef lpDataCnt As Integer, ByRef dwpReadData As Integer) As Integer

'=============================================================================================================

'======== Only for PCI-R32IOEV-RTEX ===========================================================================
' The API for read or write HPI register which allocated as I/O port.
' I/O Registers for HOST interface.
' I/O 00h Host status register (HSR)
' I/O 04h Host-to-DSP control register (HDCR)
' I/O 08h DSP page register (DSPP)
' I/O 0Ch Reserved
Public Declare Function AxlSetIoPort Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwAddr As Integer, ByVal dwData As Integer) As Integer
Public Declare Function AxlGetIoPort Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwAddr As Integer, ByRef dwpData As Integer) As Integer


'======= Only for PCI-R3200-MLIII ===========================================================================

' Basic information setting API for firmware update of M-III Master board.
Public Declare Function AxlM3SetFWUpdateInit Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwTotalPacketSize As Integer, ByVal dwProcTotalStepNo As Integer) As Integer
' Verify setting value of 'AxlM3SetFWUpdateInit'.
Public Declare Function AxlM3GetFWUpdateInit Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef dwTotalPacketSize As Integer, ByRef dwProcTotalStepNo As Integer) As Integer

' M-III Master board firmware update data transfer API.
Public Declare Function AxlM3SetFWUpdateCopy Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef pdwPacketData As Integer, ByVal dwPacketSize As Integer) As Integer
' Verify setting value of 'AxlM3SetFWUpdateCopy'.
Public Declare Function AxlM3GetFWUpdateCopy Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef dwPacketSize As Integer) As Integer
